--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,19 @@
         android:theme="@style/Theme.PopPop"
         tools:targetApi="31">
         <activity
+            android:name=".RegisterActivity_UI"
+            android:exported="false" />
+<!--        <activity-->
+<!--            android:name=".LoginActivity_UI"-->
+<!--            android:exported="false" />-->
+        <activity
             android:name=".ChatActivity"
             android:exported="false" />
         <activity
             android:name=".LoginActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity_UI"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
