--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,12 +19,17 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PopPop"
         tools:targetApi="31">
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyAE34Qkm2RwbpuQqH1O7ZPVI2dj5WwqT-0" />
         <meta-data
             android:name="com.google.android.gms.wallet.api.enabled"
             android:value="true" />
+
         <activity
             android:name=".UI_ForPages.swipingActivityUI"
             android:exported="false" />
@@ -42,7 +47,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -71,9 +76,7 @@
             android:exported="false" />
         <activity
             android:name=".boardingpages.boardingName"
-            android:exported="false"/>
-
-
+            android:exported="false" />
 
         <service
             android:name=".Utils.MyFirebaseMessagingService"
